--- a/Destination.html
+++ b/Destination.html
@@ -3,11 +3,11 @@
         <title>Destinations-Travel Blog</title>
     </head>
     <body>
-    <bg >Light Blue</bg>
+    <bg color="Light Blue">
     <h1> My Travel Destination </h1>
     <h2>Ella ,Sri Lanka
         <p>Ella is small town in sri Lanka known for its scenic train rides and mountains views</p>
-        <img src ="ella.jpg" alt ="Ella Picture" hieght="50px" width="100px" Align="Right">
+        <img src ="ella.jpg" alt ="Ella Picture" hieght="100px" width="100px" Align="Right">
         <ul>
             <li>Hiking to little  Adam's Peak</li>
             <li>Visiting Nine Arches Bridge</li>
@@ -16,7 +16,7 @@
 
     </h2>
     <h3>Paris,France</h3>
-    <img src="france.jpg" alt="Paris" Hieght="50px" width="100px" Align="left">
+    <img src="france.jpg" alt="Paris" Hieght="100px" width="100px" Align="left">
     <p>Paris ,the city of lights,is famous for its art,fashion, and  romantic atmosphere.</p>
 <ul>
     <li> Visiting the Eiffel  Tower</li>
