again modified destinatioon.html

--- a/Destination.html
+++ b/Destination.html
@@ -2,12 +2,12 @@
     <head>
         <title>Destinations-Travel Blog</title>
     </head>
-    <body>
-    <bg color="Light Blue">
+    <body bgcolor="Light Blue">
+    
     <h1> My Travel Destination </h1>
     <h2>Ella ,Sri Lanka</h2>
         <p>Ella is small town in sri Lanka known for its scenic train rides and mountains views</p>
-        <img src ="ella.jpg" alt ="Ella Picture" hieght="500px" width="500px" Align="Right">
+        <img src ="ella.jpg" alt ="Ella Picture" hieght="200px" width="500px" Align="Right">
         <ul>
             <li>Hiking to little  Adam's Peak</li>
             <li>Visiting Nine Arches Bridge</li>
